Regression: Stereoscopic renders in 3.3.1 remove contrast and raise exposure upon saving file #103888

Closed
opened 2023-01-14 20:57:55 +01:00 by Dark Zalivstok · 16 comments

System Information
Operating system: Windows 11
Graphics card: GeForce 3090 Ti

Blender Version
Broken: 3.3.1
Worked: 3.3.0

Short description of error
Rendering a scene with stereoscopy causes the scene to be overexposed and lose contrast, but only once you've saved the image to your drive.
Color Management is completely ignored unless you use the node "Convert ColorSpace" within the compositor, which requires a good bit of tinkering to get your desired look.

I've replicated this across multiple projects, using both Blender 3.3 and 3.4. I've even sent my project files off to other artists and had them duplicate the bug.
I only realized it was the "stereoscopy" setting when I stopped a test render by accident, and decided to save it. anyways to see how it looked.
The View Transform profile and look carried over, unlike the prior stereoscopic image.

Here is the scene rendered in Blender: image.png

Here is the saved image, but with stereoscopy turned off: image.png

And here is how the saved image looks with stereoscopy turned on: image.png

As you can see, the exposure is much higher, and there is less saturation. Possibly less contrast as well, but that could just be a byproduct of the exposure being higher.

Exact steps for others to reproduce the error

  • Open attached .blend file (camera all set up, 'Stereoscopy' and all settings ready to go)
  • render the image
  • save resulting image
  • Compare the image to your render viewport

Room Example 1.blend

**System Information** Operating system: Windows 11 Graphics card: GeForce 3090 Ti **Blender Version** Broken: 3.3.1 Worked: 3.3.0 **Short description of error** Rendering a scene with stereoscopy causes the scene to be overexposed and lose contrast, but only once you've saved the image to your drive. Color Management is completely ignored unless you use the node "Convert ColorSpace" within the compositor, which requires a good bit of tinkering to get your desired look. I've replicated this across multiple projects, using both Blender 3.3 and 3.4. I've even sent my project files off to other artists and had them duplicate the bug. I only realized it was the "stereoscopy" setting when I stopped a test render by accident, and decided to save it. anyways to see how it looked. The View Transform profile and look carried over, unlike the prior stereoscopic image. Here is the scene rendered in Blender: ![image.png](https://archive.blender.org/developer/F14160155/image.png) Here is the saved image, but with **stereoscopy** turned **off**: ![image.png](https://archive.blender.org/developer/F14160363/image.png) And here is how the saved image looks with **stereoscopy** turned **on**: ![image.png](https://archive.blender.org/developer/F14160369/image.png) As you can see, the exposure is much higher, and there is less saturation. Possibly less contrast as well, but that could just be a byproduct of the exposure being higher. **Exact steps for others to reproduce the error** - Open attached .blend file (camera all set up, 'Stereoscopy' and all settings ready to go) - render the image - save resulting image - Compare the image to your render viewport [Room Example 1.blend](https://archive.blender.org/developer/F14160288/Room_Example_1.blend)
Author

Added subscriber: @Dark_Zalivstok

Added subscriber: @Dark_Zalivstok

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I'm not sure if I was able to replicate the problem.
It all looks pretty much the same to me:
image.png

I'm not sure if I was able to replicate the problem. It all looks pretty much the same to me: ![image.png](https://archive.blender.org/developer/F14153897/image.png)
Author

Thanks for looking into it. I don't think it will matter, but just in case I should clarify for camera settings: as well as being set up for steroscopic renders, mine is also be side by side. I'll include screenshots of my camera setting as I have it.

You'll also need to compare the viewport/render image to the actual saved one your hard drive. The problem arises once it's actually saved to your hard drive, as it's fine before saving it. I think something in saving the image changes it. As simple as clicking on the saved image in your folder and comparing the folder preview to the render or rendered viewport.

image.png
image.png

Thanks for looking into it. I don't think it will matter, but just in case I should clarify for camera settings: as well as being set up for steroscopic renders, mine is also be side by side. I'll include screenshots of my camera setting as I have it. You'll also need to compare the viewport/render image to the actual saved one your hard drive. The problem arises once it's actually saved to your hard drive, as it's fine before saving it. I think something in saving the image changes it. As simple as clicking on the saved image in your folder and comparing the folder preview to the render or rendered viewport. ![image.png](https://archive.blender.org/developer/F14153954/image.png) ![image.png](https://archive.blender.org/developer/F14153958/image.png)

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I noticed that you are using Cycles.
But even putting the same settings, I can not replicate the problem.
image.png

We need reliable steps to repro it.
Normally .blend files can be simplified by removing most objects and disabling settings, until the problem reveals itself more clearly.
If there are many steps to reproduce the problem, please attach a .blend file saved right before the bug occurs, so only a few steps are needed to trigger the bug.

I noticed that you are using Cycles. But even putting the same settings, I can not replicate the problem. ![image.png](https://archive.blender.org/developer/F14159643/image.png) We need reliable steps to repro it. Normally .blend files can be simplified by removing most objects and disabling settings, until the problem reveals itself more clearly. If there are many steps to reproduce the problem, please attach a .blend file saved right before the bug occurs, so only a few steps are needed to trigger the bug.
Author

It looks like you're not comparing the rendered product or viewport to the SAVED image on your computer. You're comparing the rendered product to the viewport. The saved render is what looks different. I can't stress this enough, the image is not saving like it should. Once the render is saved, it loses it's color management profile.

When I get a chance I'll reproduce this myself with screenshots. But again, the stereoscopic render changes when it is SAVED.

It looks like you're not comparing the rendered product or viewport to the SAVED image on your computer. You're comparing the rendered product to the viewport. The saved render is what looks different. I can't stress this enough, the image is not saving like it should. Once the render is saved, it loses it's color management profile. When I get a chance I'll reproduce this myself with screenshots. But again, the stereoscopic render changes when it is SAVED.

In #103888#1475580, @Dark_Zalivstok wrote:
It looks like you're not comparing the rendered product or viewport to the SAVED image on your computer.

See the screenshot, the two images above (Left and Right) do not have the Blender interface. They are image files loaded with the Microsoft Photos app.

> In #103888#1475580, @Dark_Zalivstok wrote: > It looks like you're not comparing the rendered product or viewport to the SAVED image on your computer. See the screenshot, the two images above (Left and Right) do not have the Blender interface. They are image files loaded with the Microsoft Photos app.
Author

I apologize. That is my fault. I assumed the examples were Blender because the colors were so similar, and my colors on my PC are so different. That's my fault.

I'll get a .blend uploaded with the settings I used and share that here. Hopefully that will help narrow it down.

I apologize. That is my fault. I assumed the examples were Blender because the colors were so similar, and my colors on my PC are so different. That's my fault. I'll get a .blend uploaded with the settings I used and share that here. Hopefully that will help narrow it down.
Author

Here is the scene rendered in Blender: image.png

Here is the same scene, but with viewport shading: image.png

Here is the saved image, but with stereoscopy turned off: image.png

And here is how the saved image looks with stereoscopy enabled: image.png

Room Example 1.blend

As you can see, the exposure is much higher, and there is less saturation. Possibly less contrast as well, but that could just be a byproduct of the exposure being higher.

Here is the .blend with the camera all set up, same room, lit up and all settings ready to go. All you'll need to do is open the .blend, render the image, and save it. If you don't want to use the room I'll understand. I just chose to use something with a little color and contrast already in it to give a better example of changes in saving. If that's the case, feel free to just delete the room models and place something else in there.

Here is the scene rendered in Blender: ![image.png](https://archive.blender.org/developer/F14160155/image.png) Here is the same scene, but with viewport shading: ![image.png](https://archive.blender.org/developer/F14160158/image.png) Here is the saved image, but with stereoscopy turned off: ![image.png](https://archive.blender.org/developer/F14160363/image.png) And here is how the saved image looks with stereoscopy enabled: ![image.png](https://archive.blender.org/developer/F14160369/image.png) [Room Example 1.blend](https://archive.blender.org/developer/F14160288/Room_Example_1.blend) As you can see, the exposure is much higher, and there is less saturation. Possibly less contrast as well, but that could just be a byproduct of the exposure being higher. Here is the .blend with the camera all set up, same room, lit up and all settings ready to go. All you'll need to do is open the .blend, render the image, and save it. If you don't want to use the room I'll understand. I just chose to use something with a little color and contrast already in it to give a better example of changes in saving. If that's the case, feel free to just delete the room models and place something else in there.
Germano Cavalcante changed title from Stereoscopic Renders in 3.3.1 and 3.4.1 Remove Contrast and Raise Exposure Upon Saving File to Regression: Stereoscopic renders in 3.3.1 remove contrast and raise exposure upon saving file 2023-01-19 16:23:13 +01:00

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Added subscriber: @LukasStockner

Added subscriber: @LukasStockner
Lukas Stockner self-assigned this 2023-01-23 21:52:25 +01:00
Member

Caused by 42937493d8.

Caused by 42937493d8.

This issue was referenced by f72969f377

This issue was referenced by f72969f377a05741ded8f8bfa325d5980a58d1a6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Since this report mentions stereo panorama rendering in 3.3: Note that there was a bug in 3.0 - 3.4 that broke Cycles stereoscopic panoramas (#94752). I didn't add that one to be backported (yet) since it's a significant change to the output, but it means that you'll probably want to use a nightly build until 3.5 is released.

Since this report mentions stereo panorama rendering in 3.3: Note that there was a bug in 3.0 - 3.4 that broke Cycles stereoscopic panoramas (#94752). I didn't add that one to be backported (yet) since it's a significant change to the output, but it means that you'll probably want to use a nightly build until 3.5 is released.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103888
No description provided.