Fix T103888: Regression: Side-by-side stereo renders ignore color management

Looks like rB42937493d8253a295a97092315288f961e8c6dba accidentally dropped the
colorspace copy.